test/errors/assert/fn_call.yasl


fn f() {
    assert false
}

f()

